--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,6 +38,9 @@ iframe{
     position: relative;
     top:80px;
     left:22px;
-    width: 269px;
+    width: 268px;
     height: 471px; 
 }
+ iframe{
+    background: url('style.css');
+ }
